--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "next": "14.2.13",
     "prisma": "^5.20.0",
     "react": "^18",
